# pml-bert

./: .deepsource.toml  .gitignore  README.md
replibert/: README.md  pml.def  pyproject.toml
replibert/data/: README.md  insights.ipynb
replibert/data/kaggle_predictions/test/: jigsaw-predict-bert-large.csv  jigsaw-predict-bert-small.csv  regex-primer.csv  single-lstm-3rd-place.csv
replibert/data/kaggle_predictions/validation/: bert-embeddings-lstm.csv  cnn-in-keras-on-folds.csv  pytorch-bert-inference.csv  simple-lstm.csv  temporal-cnn.csv
replibert/experiments/baselines/: log_regression.md  naive_bayes.md
replibert/experiments/bert/: epochs.md  learning_rates.md  preprocessing.md  regularization.md
replibert/experiments/civil_comments/baselines/: linar_svm.md
replibert/experiments/civil_comments/bert/: batch_size.md  confidence_scores_bert.csv  pos_proportion.md  sequence_len.md
replibert/experiments/jigsaw/baselines/: linear_svm.md  log_regression.md  naive_bayes.md
replibert/experiments/jigsaw/bert/: epochs.md  learning_rates.md  preprocessing.md
replibert/replibert/: baseline.py  config.yaml  data_loader.py  evaluating.py  main.py  model.py  model_init.py  training.py  tuning.py  utils.py  visualize.ipynb
replibert/replibert/.ipynb_checkpoints/: visualize-checkpoint.ipynb
replibert/replibert/configuration/: app.yaml  config.py  logging.ini
replibert/replibert/data/: dataset.py  download.py  mlm.py  preprocess.py  tokenizer.py  transform.py  utils.py
replibert/replibert/data/finetuning/: datasets.py  loader.py  transform.py
replibert/replibert/finetuning/: classification.py  evaluate.py  explain.py  loss.py
replibert/replibert/model/: initialize.py  model.py
replibert/replibert/plots/: plot.py
replibert/replibert/tests/: test_main.py
replibert/scripts/: _mlm_job.sh  _tokenize_job.sh  baseline.sh  build_image.sh  combine.sh  download.sh  mlm.sh  run.sh  run_container.sh  tokenize.sh
replibert/scripts/finetuning/: baseline.sh  finetune.sh  finetune_on_mig.sh
replibert/scripts/training/: _mlm_job.sh  _tokenize_job.sh  combine.sh  mlm.sh  tokenize.sh
(+54 files in other folders)
